# test-mkdocs

./: .release-please-manifest.json  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: release-please.yaml
docs/: index.md
search/: search_index.json
test/: index.html
