[tool.poetry]
name = "test-mkdocs"
version = "0.2.0"
description = ""
authors = ["dpomerleano <david.pomerleano@statsperform.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
